# dpkg-unlocker

./: generate_po.sh  pyproject.toml  setup_cli.py  setup_gui.py
debian/: changelog  control  dpkgunlocker-cli.install  dpkgunlocker-gui.dirs  dpkgunlocker-gui.install  dpkgunlocker-gui.pofiles  dpkgunlocker-gui.postinst  dpkgunlocker-gui.prerm  dpkgunlocker-gui.zero  install  python3-dpkgunlocker.pkexec  python3-dpkgunlocker.postinst  rules
dpkgunlocker-cli/: __init__.py  dpkg-unlocker-cli
dpkgunlocker-cli.install/: dpkg-unlocker-cli
dpkgunlocker-gui/: Core.py  DpkgUnlocker.py  MainStack.py  ProtectionStack.py  RestoreStack.py  ServiceStack.py  ServicesModel.py  UnlockerManager.py  dpkg-unlocker-gui
dpkgunlocker-gui/data_files/: dpkg-unlocker-gui.desktop
dpkgunlocker-gui/python3-dpkgunlocker-gui/: Core.py  DpkgUnlocker.py  MainStack.py  MainWindow.py  ProcessBox.py  ProtectionStack.py  UnlockerManager.py  settings.py
dpkgunlocker-gui/python3-dpkgunlocker-gui/rsrc/: ApplicationOptions.qml  InformationPanel.qml  KonsolePanel.qml  (+12 more)
dpkgunlocker-gui/rsrc/: ApplicationOptions.qml  KonsolePanel.qml  ListDelegateServiceItem.qml  Loading.qml  MenuOptionBtn.qml  ProtectionPanel.qml  RestorePanel.qml  ServicesList.qml  ServicesPanel.qml  UnlockDialog.qml  dpkg-unlocker.qml
python3-dpkgunlocker/: dpkgunlockermanager.py
setup/: setup.py
translations/: ca@valencia.po  ca_ES.UTF-8@valencia.po  ca_ES@valencia.po  dpkg-unlocker.pot  es.po
translations/dpkg-unlocker/: ca@valencia.po  dpkg-unlocker.pot  es.po
zero-center-files/: dpkg-unlocker.app  dpkg-unlocker.zmd
(+9 files in other folders)
